Configure Azure Developer Pipeline

--- a/docs/workshop/LAB-SETUP.ipynb
+++ b/docs/workshop/LAB-SETUP.ipynb
@@ -22,18 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CREDENTIALS\n",
-    "Username     = \"Username\"\n",
-    "\n",
-    "Password     = \"Password\"\n",
-    "\n",
-    "AzureEnvName = \"AzureEnvName\"\n",
-    "\n",
-    "Subscription = \"Subscription\""
+    "Username     = \"User1-45858160@LODSPRODMCA.onmicrosoft.com\"\n",
+    "Password     = \"hBdB1e!0D#\"\n",
+    "AzureEnvName = \"AITOUR45858160\"\n",
+    "Subscription = \"9c8c6dfc-49a3-46cb-aa4b-9c605004b055\""
    ]
   },
   {
@@ -60,9 +56,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[0;33m!\u001b[0m First copy your one-time code: \u001b[0;1;39mF891-C7D9\u001b[0m\n",
+      "\u001b[0;1;39mOpen this URL\u001b[0m to continue in your web browser: https://github.com/login/device\n",
+      "\u001b[0;32m✓\u001b[0m Authentication complete.\n",
+      "- gh config set -h github.com git_protocol https\n",
+      "\u001b[0;32m✓\u001b[0m Configured git protocol\n",
+      "\u001b[0;33m!\u001b[0m Authentication credentials saved in plain text\n",
+      "\u001b[0;32m✓\u001b[0m Logged in as \u001b[0;1;39mwzhphfe\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! echo Y | GITHUB_TOKEN=\"\" gh auth login --hostname github.com --git-protocol https --web --scopes workflow "
    ]
@@ -76,9 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[K\u001b[0;33m!\u001b[0m \u001b[0;1;39mwzhphfe/contoso-creative-writer\u001b[0m already exists\n",
+      "\u001b[0;32m✓\u001b[0m Added remote \u001b[0;1;39morigin\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! GITHUB_TOKEN=\"\" gh repo fork --remote"
    ]
@@ -96,9 +116,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[93mAuthentication with username and password in the command line is strongly discouraged. Use one of the recommended authentication methods based on your requirements. For more details, see https://go.microsoft.com/fwlink/?linkid=2276314\u001b[0m\n",
+      "[\n",
+      "  {\n",
+      "    \"cloudName\": \"AzureCloud\",\n",
+      "    \"homeTenantId\": \"4cfe372a-37a4-44f8-91b2-5faf34253c62\",\n",
+      "    \"id\": \"9c8c6dfc-49a3-46cb-aa4b-9c605004b055\",\n",
+      "    \"isDefault\": true,\n",
+      "    \"managedByTenants\": [],\n",
+      "    \"name\": \"AIDay-lod49826970\",\n",
+      "    \"state\": \"Enabled\",\n",
+      "    \"tenantDefaultDomain\": \"LODSPRODMCA.onmicrosoft.com\",\n",
+      "    \"tenantDisplayName\": \"LODS-Prod-MCA\",\n",
+      "    \"tenantId\": \"4cfe372a-37a4-44f8-91b2-5faf34253c62\",\n",
+      "    \"user\": {\n",
+      "      \"name\": \"User1-45858160@LODSPRODMCA.onmicrosoft.com\",\n",
+      "      \"type\": \"user\"\n",
+      "    }\n",
+      "  }\n",
+      "]\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "! az login -u $Username -p $Password"
    ]
@@ -114,9 +161,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "- **Username**: `User1-45858160@LODSPRODMCA.onmicrosoft.com`\n",
+       " - **Password**: `hBdB1e!0D#`"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown\n",
     "Markdown(f\"- **Username**: `{Username}`\\n - **Password**: `{Password}`\")"
@@ -124,9 +186,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start by copying the next code: \u001b[1mEYHZF2DNF\u001b[0m\n",
+      "Then, go to: https://microsoft.com/devicelogin\n",
+      "Waiting for you to complete authentication in the browser...\n",
+      "Device code authentication completed.\n",
+      "Logged in to Azure.ing subscriptions...\n",
+      "\u001b[33mWARNING: your version of azd is out of date, you have 1.10.4 and the latest version is 1.11.0\u001b[0m\n",
+      "\n",
+      "\u001b[33mTo update to the latest version, run:\n",
+      "curl -fsSL https://aka.ms/install-azd.sh | bash\n",
+      "\n",
+      "If the install script was run with custom parameters, ensure that the same parameters are used for the upgrade. For advanced install instructions, see: https://aka.ms/azd/upgrade/linux\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! azd auth login --use-device-code --no-prompt"
    ]
@@ -151,9 +231,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "azd env refresh -e AITOUR45858160"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown\n",
     "Markdown(f\"azd env refresh -e {AzureEnvName}\")"
@@ -175,9 +269,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: your version of azd is out of date, you have 1.10.4 and the latest version is 1.11.0\n",
+      "\n",
+      "To update to the latest version, run:\n",
+      "curl -fsSL https://aka.ms/install-azd.sh | bash\n",
+      "\n",
+      "If the install script was run with custom parameters, ensure that the same parameters are used for the upgrade. For advanced install instructions, see: https://aka.ms/azd/upgrade/linux\n"
+     ]
+    }
+   ],
    "source": [
     "! azd env get-values > ../../.env"
    ]
@@ -198,9 +305,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: your version of azd is out of date, you have 1.10.4 and the latest version is 1.11.0\n",
+      "\n",
+      "To update to the latest version, run:\n",
+      "curl -fsSL https://aka.ms/install-azd.sh | bash\n",
+      "\n",
+      "If the install script was run with custom parameters, ensure that the same parameters are used for the upgrade. For advanced install instructions, see: https://aka.ms/azd/upgrade/linux\n",
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": null,\n",
+      "  \"createdOn\": \"2024-11-19T19:45:52.732827+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/9c8c6dfc-49a3-46cb-aa4b-9c605004b055/resourceGroups/rg-AITOUR45858160/providers/Microsoft.Authorization/roleAssignments/e9cafecd-5414-43c6-ba98-8e15e7d6b158\",\n",
+      "  \"name\": \"e9cafecd-5414-43c6-ba98-8e15e7d6b158\",\n",
+      "  \"principalId\": \"9536fb6c-c74c-49a9-ab34-45022824f1bd\",\n",
+      "  \"principalType\": \"User\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR45858160\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/9c8c6dfc-49a3-46cb-aa4b-9c605004b055/providers/Microsoft.Authorization/roleDefinitions/8ebe5a00-799e-43f5-93ac-243d3dce84a7\",\n",
+      "  \"scope\": \"/subscriptions/9c8c6dfc-49a3-46cb-aa4b-9c605004b055/resourceGroups/rg-AITOUR45858160\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"9536fb6c-c74c-49a9-ab34-45022824f1bd\",\n",
+      "  \"updatedOn\": \"2024-11-19T19:45:52.862826+00:00\"\n",
+      "}\n",
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": null,\n",
+      "  \"createdOn\": \"2024-11-19T19:45:55.491199+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/9c8c6dfc-49a3-46cb-aa4b-9c605004b055/resourceGroups/rg-AITOUR45858160/providers/Microsoft.Authorization/roleAssignments/9e261d0d-7289-403c-b314-2cdd656455ea\",\n",
+      "  \"name\": \"9e261d0d-7289-403c-b314-2cdd656455ea\",\n",
+      "  \"principalId\": \"9536fb6c-c74c-49a9-ab34-45022824f1bd\",\n",
+      "  \"principalType\": \"User\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR45858160\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/9c8c6dfc-49a3-46cb-aa4b-9c605004b055/providers/Microsoft.Authorization/roleDefinitions/1407120a-92aa-4202-b7e9-c0e197c71c8f\",\n",
+      "  \"scope\": \"/subscriptions/9c8c6dfc-49a3-46cb-aa4b-9c605004b055/resourceGroups/rg-AITOUR45858160\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"9536fb6c-c74c-49a9-ab34-45022824f1bd\",\n",
+      "  \"updatedOn\": \"2024-11-19T19:45:55.597203+00:00\"\n",
+      "}\n",
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": null,\n",
+      "  \"createdOn\": \"2024-11-19T19:45:57.386074+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/9c8c6dfc-49a3-46cb-aa4b-9c605004b055/resourceGroups/rg-AITOUR45858160/providers/Microsoft.Authorization/roleAssignments/8abe2071-4aa0-4293-97c6-6aca8ee9beb4\",\n",
+      "  \"name\": \"8abe2071-4aa0-4293-97c6-6aca8ee9beb4\",\n",
+      "  \"principalId\": \"9536fb6c-c74c-49a9-ab34-45022824f1bd\",\n",
+      "  \"principalType\": \"User\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR45858160\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/9c8c6dfc-49a3-46cb-aa4b-9c605004b055/providers/Microsoft.Authorization/roleDefinitions/5e0bd9bd-7b93-4f28-af87-19fc36ad61bd\",\n",
+      "  \"scope\": \"/subscriptions/9c8c6dfc-49a3-46cb-aa4b-9c605004b055/resourceGroups/rg-AITOUR45858160\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"9536fb6c-c74c-49a9-ab34-45022824f1bd\",\n",
+      "  \"updatedOn\": \"2024-11-19T19:45:57.488073+00:00\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "! bash ../../infra/hooks/roles.sh"
    ]
@@ -215,9 +389,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1mRunning hooks (azd hooks run)\u001b[0m\n",
+      "\u001b[90mFinding and executing \u001b[36mpostprovision\u001b[0m hooks for environment \u001b[36mAITOUR45858160\u001b[0m.\u001b[0m\n",
+      "\n",
+      "\u001b[K  Running 1 postprovision command hook(s) for project\n",
+      "\n",
+      "\u001b[K  ──── Project: postprovision Hook Output ──────────────────────────────────────\n",
+      "\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\u001b[K  Populating data ....\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\u001b[K  Populating data ....\n",
+      "\u001b[K  --- ✅ | 3. Post-provisioning - populated data ---\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\u001b[K  Populating data ....\n",
+      "\u001b[K  --- ✅ | 3. Post-provisioning - populated data ---\n",
+      "\u001b[K  --- 🎉 | 4. Access your ACA deployed web app here: https://agent-web.proudro\n",
+      "\u001b[K  ck-2ec9ebee.canadaeast.azurecontainerapps.io\n",
+      "\n",
+      "\u001b[KRunning 1 postprovision command hook(s) for project──────────────────────────\n",
+      "  \u001b[32m(✓) Done:\u001b[0m Running 1 postprovision command hook(s) for project\n",
+      "  \u001b[33m(!) Warning:\u001b[0m Running 0 postprovision service hook(s) for api (No hook found)\n",
+      "Running 0 postprovision service hook(s) for web\n",
+      "  \u001b[33m(!) Warning:\u001b[0m Running 0 postprovision service hook(s) for web (No hook found)\n",
+      "\u001b[32m\n",
+      "SUCCESS: Your hooks have been run successfully\u001b[0m\n",
+      "\u001b[33mWARNING: your version of azd is out of date, you have 1.10.4 and the latest version is 1.11.0\u001b[0m\n",
+      "\n",
+      "\u001b[33mTo update to the latest version, run:\n",
+      "curl -fsSL https://aka.ms/install-azd.sh | bash\n",
+      "\n",
+      "If the install script was run with custom parameters, ensure that the same parameters are used for the upgrade. For advanced install instructions, see: https://aka.ms/azd/upgrade/linux\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! echo 1 | azd hooks run postprovision -e $AzureEnvName"
    ]
