--- a/docs/workshop/workshop-2-tracing.ipynb
+++ b/docs/workshop/workshop-2-tracing.ipynb
@@ -56,9 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 Have you heard about the latest trend in AI? Meet the new superheroes of tech: AI Agents! 🌟 Here are some cool things you need to know about them. 🧵👇\n",
+      "\n",
+      "1/ AI Agents are like your personal assistants on steroids! 💪 They don’t just chat; they perform tasks independently, making your life easier by handling everything from customer service to supply chain management. 🛠️🤖 #AI #Tech\n",
+      "\n",
+      "2/ These AI Agents can analyze their environment, gather data, and make decisions on their own to achieve specific goals. Imagine a virtual workforce that doesn't need coffee breaks! ☕🙇‍♂️ #ArtificialIntelligence #Automation\n",
+      "\n",
+      "3/ Big names like Microsoft are leading the charge, pitching AI Agents as the future of productivity tools. They're not just a trend; they're here to revolutionize how we work and interact with technology. 🌐🔧 #Microsoft #Innovation\n",
+      "\n",
+      "4/ But it’s not all smooth sailing. Developing and running these AI Agents can be costly, and some experts are questioning whether they’re worth the investment. Only time will tell if they’ll live up to the hype! 💸🕰️ #FutureTech #AIChatbots\n",
+      "\n",
+      "Keep an eye on AI Agents—they might just change the game completely! 🔮 What are your thoughts? Let us know below! 👇✨ #TechNews #AIRevolution\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -158,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
