--- a/docs/workshop/workshop-1-intro.ipynb
+++ b/docs/workshop/workshop-1-intro.ipynb
@@ -183,9 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ToolCall(id='call_RuI3WfzhmZCUZ9RnG35EFrOd', name='find_information', arguments='{\"query\":\"best educational material for learning Python programming\",\"market\":\"en-US\"}')]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import prompty\n",
     "import prompty.azure\n",
@@ -227,9 +238,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ToolCall(id='call_q8RGrkpn5vNsP6GrA7laajdF', name='find_entities', arguments='{\"query\":\"Python programming language inventor\",\"market\":\"en-US\"}')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "instructions = \"Who is the person who invented the Python programming language?\"\n",
     "prompty.execute(os.getcwd() + \"/researcher/researcher-2.prompty\", inputs={\"instructions\": instructions})"
@@ -252,9 +274,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ToolCall(id='call_pn73Qt3Z1wG2uaf6mev61oQC', name='find_information', arguments='{\"query\":\"latest news about Microsoft\",\"market\":\"en-US\"}')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "instructions = \"Find the latest news about Microsoft?\"\n",
     "prompty.execute(os.getcwd() + \"/researcher/researcher-2.prompty\", inputs={\"instructions\": instructions})"
@@ -349,9 +382,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 'call_lJpwciPnUsMrJvwy7xg4ZBwp',\n",
+       "  'function': 'find_information',\n",
+       "  'arguments': {'query': 'best educational material for learning Python programming',\n",
+       "   'market': 'en-US'},\n",
+       "  'result': {'pages': [{'url': 'https://hackr.io/blog/best-python-books-for-beginners-and-advanced-programmers',\n",
+       "     'name': 'The 15 Best Python Books for Beginners & Advanced Coders [2024] - Hackr',\n",
+       "     'description': 'In this article, we share the 15 best Python books in 2024. Whether you’re new to Python or an experienced Pythonista looking to boost your skills, we’ve included Python books for beginners and pros.. As the number 3 language among developers, python books can be the ideal way to learn Python for data science, web development, and more.. And sure, you can find answers to most coding ...'},\n",
+       "    {'url': 'https://realpython.com/best-python-books/',\n",
+       "     'name': 'The Best Python Books',\n",
+       "     'description': 'Python Tutorials → In-depth articles and video courses Learning Paths → Guided study plans for accelerated learning Quizzes → Check your learning progress Browse Topics → Focus on a specific area or skill level Community Chat → Learn with other Pythonistas Office Hours → Live Q&A calls with Python experts Podcast → Hear what’s new in the world of Python Books →'},\n",
+       "    {'url': 'https://www.geeksforgeeks.org/best-python-books/',\n",
+       "     'name': '9 Best Python Books For Beginners and Experts [2025]',\n",
+       "     'description': 'Some programmers say that Python programming language serves as a great option as a first programming language to learn while others claim that it is a great last language to learn!!!! Whatever the case, it is indisputable that Python is an extremely popular language to learn. According to the TIOBE Index, Python is among the top three most popular programming languages in the world currently ...'},\n",
+       "    {'url': 'https://www.freecodecamp.org/news/best-python-courses/',\n",
+       "     'name': '10 Best Python Courses to Take in 2022 - freeCodeCamp.org',\n",
+       "     'description': 'Fun Facts. As you may know, freeCodeCamp is a nonprofit that helps people learn to code by building projects, for free. They offer 10 courses with free certifications.; freeCodeCamp’s Youtube Channel has more than 5M subscribers and 1200+ videos on a wide variety of programming and computer science topics. (Yes, we’re fans)'},\n",
+       "    {'url': 'https://pythonbooks.org/free-books/',\n",
+       "     'name': 'Free Python books - pythonbooks.org',\n",
+       "     'description': 'Hands-down one of the best books for learning Python. It teaches an absolute beginner to harness the power of Python and program computers to do tasks in seconds that would normally take hours to d...'}],\n",
+       "   'related': ['best python learning courses',\n",
+       "    'best python courses for beginners',\n",
+       "    'best python machine learning courses',\n",
+       "    'top 10 python courses',\n",
+       "    'best python for beginners',\n",
+       "    'best online machine learning python',\n",
+       "    'best python for research',\n",
+       "    'best interactive python courses']}},\n",
+       " {'id': 'call_71le7FYgRPGc62P0UGry8WoK',\n",
+       "  'function': 'find_entities',\n",
+       "  'arguments': {'query': 'best educational material for learning Python programming',\n",
+       "   'market': 'en-US'},\n",
+       "  'result': []}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
